force-app/main/default/objects/Invoice_Item__c/Invoice_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Item</label>
    <nameField>
        <label>Managed Service Invoice Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>