force-app/main/default/objects/Invoice_Item__c/fields/Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Line_Id__c</fullName>
    <label>Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>