force-app/main/default/objects/Invoice_Item__c/fields/Managed_Service_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Managed_Service_Invoice__c</fullName>
    <label>Managed Service Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipName>Invoice_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>