force-app/main/default/objects/Invoice_Item__c/fields/Managed_Services_Billing_Landing__c.field-meta.xml
<CustomField>
    <fullName>Managed_Services_Billing_Landing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed Services Billing Landing</label>
    <referenceTo>Managed_Services_Billing_Landing__c</referenceTo>
    <relationshipName>Managed_Service_Invoice_items</relationshipName>
    <type>Lookup</type>
</CustomField>