force-app/main/default/objects/Invoice_Item__c/fields/MS_Amount_Different__c.field-meta.xml
<CustomField>
    <fullName>MS_Amount_Different__c</fullName>
    <formula>IF(
    AND(
        Amount__c &gt; 0,
        Amount__c !=  MS_Billing_Landing__r.Amount__c 
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MS Amount Different</label>
    <type>Checkbox</type>
</CustomField>