force-app/main/default/objects/Invoice_Item__c/fields/MS_Billing_Landing__c.field-meta.xml
<CustomField>
    <fullName>MS_Billing_Landing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MS Billing Landing</label>
    <referenceTo>Managed_Services_Billing_Landing__c</referenceTo>
    <relationshipLabel>Invoice items</relationshipLabel>
    <relationshipName>Invoice_items</relationshipName>
    <type>Lookup</type>
</CustomField>