force-app/main/default/objects/Invoice_Item__c/fields/Netsuite_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Id__c</fullName>
    <label>Netsuite Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>