force-app/main/default/objects/Invoice_Item__c/fields/Opportunity_Item__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Item</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipName>OpptyItems</relationshipName>
    <type>Lookup</type>
</CustomField>