force-app/main/default/objects/Invoice_Item__c/fields/PG_Amount_Different__c.field-meta.xml
<CustomField>
    <fullName>PG_Amount_Different__c</fullName>
    <formula>IF(
AND(
Amount__c &gt; 0,
Amount__c != PG_Billing_Landing__r.Revenue_Local__c
),
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PG Amount Different</label>
    <type>Checkbox</type>
</CustomField>