force-app/main/default/objects/Invoice_Item__c/fields/PG_Billing_Landing__c.field-meta.xml
<CustomField>
    <fullName>PG_Billing_Landing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PG Billing Landing</label>
    <referenceTo>Programmatic_Billing_Landing__c</referenceTo>
    <relationshipLabel>Invoice items</relationshipLabel>
    <relationshipName>Invoice_items</relationshipName>
    <type>Lookup</type>
</CustomField>