force-app/main/default/objects/Invoice_Item__c/fields/Rev_End_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_End_End_Date__c</fullName>
    <label>Rev End_End_Date</label>
    <type>Date</type>
</CustomField>