force-app/main/default/objects/Invoice_Item__c/fields/Rev_Rec_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Start_Date__c</fullName>
    <label>Rev Rec_Start_Date</label>
    <type>Date</type>
</CustomField>